added search PPA endpoint
