# swagger-output.json
@@ -1263,25 +1263,22 @@
     "/api/v1.0/ppas": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "500": {
             "description": "Internal Server Error"
-          },
-          "502": {
-            "description": "Bad Gateway"
+          }
+        }
+      }
+    },
+    "/api/v1.0/ppas/search": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
